# tlict

./: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md
src/: archive.rs  builder.rs  character.rs  error.rs  font.rs  language.rs  lib.rs  main.rs  models.rs  output.rs  pronunciation.rs  searcher.rs
test-lang/: chars  lang.toml
test-lang/dict/: advanced.json  basic.json
