[package]
name = "tlict"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "A language analysis and compilation tool for constructing and analyzing domain-specific languages"
authors = ["devwon"]
readme = "README.md"
repository = "https://github.com/yourusername/tlict"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sevenz-rust = "0.5"
walkdir = "2.4"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
uuid = { version = "1.6", features = ["v4"] }
colored = "2.0"
tar = "0.4"
flate2 = "1.0"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "tlict"
path = "src/main.rs"
